objects/nFORCE__Custom_Error_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores custom error configuration information.</description>
    <fields>
        <fullName>nFORCE__Error_Code__c</fullName>
        <description>System administrators populate this optional text field with a unique alphanumeric identifier associated with the custom error. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Code</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Error_Template__c</fullName>
        <description>System administrators populate this optional text field with the API name of the custom label associated with the custom error template. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Name__c</fullName>
        <description>DO NOT USE THIS. Use Name for the Custom Setting record instead of this field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Namespace_Prefix__c</fullName>
        <description>System administrators populate this optional text field with the namespace prefix of the custom label associated with the custom error template. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Custom Error Configuration</label>
</CustomObject>